--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sori - Learn Korean</title>
+  <title>Sori - Learn Korean by Sound</title>
 
   <!-- head -->
 <script>
@@ -138,7 +138,7 @@
   <header class="header">
     <div>
       <h1>Sori <span style="font-size:14px;color:#9ca3af;font-weight:600;">(beta)</span></h1>
-      <div class="intro">Master Korean with K-Drama lines and daily conversations</div>
+      <div class="intro">Learn Korean naturally by repeating real sounds</div>
     </div>
     <div>
       <button id="loginBtn" class="top-btn primary">Login</button>
@@ -567,6 +567,7 @@
   
 </body>
 </html>
+
 
 
 
