--- a/index.html
+++ b/index.html
@@ -38,70 +38,92 @@
     h1{font-size:24px;margin:0 0 4px;color:#7c3aed;font-weight:800}
     .intro{color:#9ca3af;font-size:12px;margin-bottom:10px;line-height:1.3;font-weight:500}
 
+    /* header */
     .header{display:flex;justify-content:space-between;align-items:center;margin-bottom:10px}
     .top-btn{padding:6px 12px;border-radius:10px;font-size:12px;font-weight:700;border:0;cursor:pointer}
     .top-btn.primary{background:#7c3aed;color:#fff}
 
+    /* cards */
     .card{background:#fff;border-radius:16px;padding:16px;margin:8px 0;box-shadow:0 2px 12px rgba(0,0,0,.05)}
 
-    /* Category picker */
-    .category-bar{display:flex;align-items:center;gap:12px}
-    .picker-wrap{position:relative}
-    .picker-trigger{
-      padding:12px 18px;border-radius:14px;background:#7c3aed;color:#fff;
-      font-weight:800;border:0;cursor:pointer;min-width:200px;text-align:center
+    /* tabs (classic) */
+    .category-tabs{display:grid;grid-template-columns:1fr 1fr;gap:8px}
+    @media(min-width:520px){ .category-tabs{grid-template-columns:repeat(3,1fr)} }
+    .tab-button{
+      padding:12px 18px;border:2px solid #f3f4f6;border-radius:14px;background:#f9fafb;color:#6b7280;
+      font-size:14px;font-weight:800;cursor:pointer;transition:.15s
     }
-    .picker-menu{
-      position:absolute;top:100%;left:0;right:0;margin-top:6px;background:#fff;border-radius:12px;
-      box-shadow:0 10px 30px rgba(0,0,0,.15);overflow:hidden;max-height:0;transition:max-height .25s ease;z-index:50
-    }
-    .picker-menu.open{max-height:156px}
-    .picker-list{max-height:150px;overflow-y:auto;padding:6px;scrollbar-width:thin}
-    .picker-item{
-      height:44px;line-height:44px;border-radius:12px;margin:6px 4px;text-align:center;
-      background:#f6f6ff;color:#5b5b72;font-weight:700;cursor:pointer;user-select:none
-    }
-    .picker-item:hover,.picker-item.active{background:#7c3aed;color:#fff}
-    .saved-btn{
-      height:44px;padding:0 16px;border-radius:12px;background:#fff;color:#7c3aed;border:2px solid #e9defd;font-weight:800;cursor:pointer;white-space:nowrap
-    }
-    .saved-btn:hover{background:#f7f2ff}
+    .tab-button:hover{background:#f3f4f6}
+    .tab-button.active{background:#7c3aed;color:#fff;border-color:#7c3aed;box-shadow:0 2px 10px rgba(124,58,237,.22)}
+    .tab-button.saved{background:#fff;border-color:#e9defd;color:#7c3aed}
 
-    /* Sub chips */
+    /* sub chips */
     .sub-filters{display:flex;gap:8px;flex-wrap:wrap;margin-top:12px}
-    .sub-chip{display:inline-flex;align-items:center;gap:6px;padding:6px 12px;border-radius:14px;background:#fff;border:2px solid #e5e7eb;color:#374151;font-size:12px;font-weight:600;cursor:pointer;user-select:none}
-    .sub-chip.active{background:#7c3aed;border-color:#7c3aed;color:#fff}
+    .sub-chip{
+      display:inline-flex;align-items:center;gap:6px;padding:6px 12px;border-radius:14px;background:#fff;
+      border:2px solid #e5e7eb;color:#374151;font-size:12px;font-weight:600;cursor:pointer;user-select:none
+    }
+    .sub-chip.active{ background:#7c3aed; border-color:#7c3aed; color:#fff; }
 
+    /* header row in lesson */
     .row-between{display:flex;justify-content:space-between;align-items:center;gap:8px}
     .badge{display:inline-block;background:#7c3aed;color:#fff;font-size:11px;font-weight:800;padding:5px 10px;border-radius:10px}
-    .icon-btn{border:none;background:transparent;width:32px;height:32px;display:inline-flex;align-items:center;justify-content:center;font-size:20px;color:#9ca3af;cursor:pointer;border-radius:8px}
-    .icon-btn.active{color:#e11d48}
+    .icon-btn{border:none;background:transparent;width:32px;height:32px;display:inline-flex;align-items:center;justify-content:center;font-size:20px;line-height:1;color:#9ca3af;cursor:pointer;border-radius:8px}
+    .icon-btn:hover{background:#f3f4f6}
+    .icon-btn.active{color:#e11d48} /* pinkish star */
 
-    .context{color:#6b7280;font-size:16px;text-align:center;margin:8px 0 0;font-weight:600}
+    /* context (영어 뜻) + spacing tighten */
+    .context{color:#6b7280;font-size:16px;text-align:center;margin:6px 0 2px;font-weight:600}
 
-    .kbox{background:#f9fafb;border-radius:14px;padding:16px 12px;margin:12px 0;text-align:center}
-    .ko{font-size:28px;font-weight:900;color:#1f2937;margin:0 0 6px}
+    /* main text */
+    .kbox{background:#f9fafb;border-radius:14px;padding:16px 12px;margin:8px 0 12px;text-align:center}
+    .ko{font-size:28px;font-weight:900;color:#1f2937;margin:4px 0 6px}
     .en{color:#6b7280;font-size:16px;margin:0 0 10px;font-weight:600}
 
+    /* practice */
     .practice{background:#f9fafb;border-radius:10px;padding:10px}
     .practice-label{font-size:12px;font-weight:600;color:#6b7280;text-align:center;margin:0 0 8px}
     .dots{display:flex;gap:6px;justify-content:center;margin-bottom:8px}
     .rep-dot{width:32px;height:32px;border-radius:50%;border:2px solid #e5e7eb;background:#fff}
     .rep-dot.completed{background:#7c3aed;border-color:#7c3aed}
 
+    /* buttons */
     button.big{width:100%;padding:12px 18px;border-radius:14px;border:0;cursor:pointer;font-weight:800;font-size:15px;background:#7c3aed;color:#fff}
-    .row{display:flex;align-items:center;justify-content:center;gap:8px;background:#f9fafb;border-radius:8px;padding:8px;margin-top:8px}
+    button.big:hover{background:#6d28d9}
 
+    /* speed row */
+    .row{display:flex;align-items:center;justify-content:center;gap:8px;background:#f9fafb;border-radius:8px;padding:8px;margin-top:8px}
+    .row label{color:#7c3aed;font-size:12px;font-weight:600}
+    .row span{color:#7c3aed;font-size:12px;font-weight:700;min-width:42px;text-align:right}
+
+    /* Prev/Next restored look */
+    .nav { display:grid; grid-template-columns:1fr 1fr; gap:8px; }
+    .secondary{
+      appearance:none; -webkit-appearance:none; border:0;
+      background:#f9fafb; color:#374151; font-weight:800; border-radius:14px;
+      padding:12px 18px; box-shadow:inset 0 0 0 1px #e5e7eb; cursor:pointer;
+    }
+    .secondary:hover{ background:#f3f4f6; }
+    .progress{text-align:center;color:#7c3aed;font-size:13px;font-weight:700;margin-top:8px}
+
+    /* Tip box: pink theme */
     .tip-card{margin-top:10px;background:#fff1f2;border-left:3px solid #e11d48;border-radius:10px;padding:10px}
     .tip-text{font-size:12px;color:#9f1239;font-weight:600}
 
-    .hidden-tabs{display:none}
-
-    /* Auth modal */
+    /* Auth modal fixed center */
     .auth{position:fixed;inset:0;display:none;align-items:center;justify-content:center;z-index:9999;background:rgba(0,0,0,.45);padding:16px}
     .auth.open{display:flex}
     .auth-card{background:#fff;width:100%;max-width:360px;border-radius:18px;padding:24px;box-shadow:0 18px 50px rgba(0,0,0,.35);text-align:center;position:relative}
     .auth-close{position:absolute;top:10px;right:10px;background:none;border:none;font-size:22px;color:#9ca3af;cursor:pointer}
+
+    /* Google button styling */
+    .gbtn{
+      display:flex; align-items:center; justify-content:center; gap:10px;
+      width:100%; padding:11px 14px; border-radius:12px;
+      background:#f7f2ff; color:#7c3aed; font-weight:800; cursor:pointer;
+      border:2px solid #e9defd;
+    }
+    .gbtn:hover{ background:#ede7ff; }
   </style>
 </head>
 <body>
@@ -114,30 +136,14 @@
     <button id="loginBtn" class="top-btn primary">Login</button>
   </header>
 
-  <!-- CATEGORY -->
+  <!-- CATEGORY (classic tabs) -->
   <section class="card">
-    <div class="category-bar">
-      <div class="picker-wrap">
-        <button id="pickerTrigger" class="picker-trigger" aria-haspopup="listbox" aria-expanded="false">Daily</button>
-        <div id="pickerMenu" class="picker-menu">
-          <div class="picker-list" role="listbox">
-            <div class="picker-item active">Daily</div>
-            <div class="picker-item">Travel</div>
-            <div class="picker-item">K-Drama</div>
-          </div>
-        </div>
-      </div>
-      <button id="savedBtn" class="saved-btn">★ Saved</button>
+    <div class="category-tabs" role="tablist" aria-label="Categories">
+      <button id="dailyBtn"  class="tab-button active" role="tab" aria-selected="true">Daily</button>
+      <button id="travelBtn" class="tab-button" role="tab" aria-selected="false">Travel</button>
+      <button id="dramaBtn"  class="tab-button" role="tab" aria-selected="false">K-Drama</button>
+      <button id="savedBtn"  class="tab-button saved" role="tab" aria-selected="false">★ Saved</button>
     </div>
-
-    <!-- 호환용 숨김 탭 -->
-    <div class="hidden-tabs" aria-hidden="true">
-      <button id="dailyBtn"  class="tab-button active">Daily</button>
-      <button id="travelBtn" class="tab-button">Travel</button>
-      <button id="dramaBtn"  class="tab-button">K-Drama</button>
-      <button id="savedBtnHidden" class="tab-button">Saved</button>
-    </div>
-
     <div id="subFilters" class="sub-filters"></div>
   </section>
 
@@ -148,6 +154,7 @@
       <button id="scrapBtn" class="icon-btn" title="Save this phrase" aria-label="Save">☆</button>
     </div>
 
+    <!-- 위: 영어 뜻 (따옴표 포함) -->
     <div id="context" class="context">"Hello"</div>
 
     <div class="kbox">
@@ -188,7 +195,15 @@
       <button id="authClose" class="auth-close" aria-label="Close">×</button>
       <div style="font-size:24px;font-weight:800;color:#7c3aed;margin-bottom:6px;">Sign in</div>
       <div style="font-size:13px;color:#9ca3af;margin-bottom:18px;">Use your Google account</div>
-      <button class="gbtn" onclick="window.handleGoogleLogin && window.handleGoogleLogin()">Continue with Google</button>
+      <button id="googleBtn" class="gbtn">
+        <svg width="18" height="18" viewBox="0 0 48 48" aria-hidden="true">
+          <path fill="#FFC107" d="M43.6 20.5H42V20H24v8h11.3C33.6 32.3 29.3 35 24 35c-7.2 0-13-5.8-13-13s5.8-13 13-13c3.3 0 6.3 1.2 8.6 3.3l5.7-5.7C34.7 3.1 29.7 1 24 1 11.8 1 2 10.8 2 23s9.8 22 22 22c11 0 21-8 21-22 0-1.5-.2-3-.4-4.5z"/>
+          <path fill="#FF3D00" d="M6.3 14.7l6.6 4.8C14.8 16.4 19 13 24 13c3.3 0 6.3 1.2 8.6 3.3l5.7-5.7C34.7 3.1 29.7 1 24 1 16 1 8.9 5.1 6.3 14.7z"/>
+          <path fill="#4CAF50" d="M24 45c5.2 0 10-1.7 13.6-4.7l-6.3-5.2C29.2 36.8 26.8 37.6 24 37.6c-5.2 0-9.6-3.5-11.2-8.3l-6.5 5.1C8.7 40.8 15.8 45 24 45z"/>
+          <path fill="#1976D2" d="M43.6 20.5H42V20H24v8h11.3c-1 3.1-3.2 5.6-5.9 7.1l6.3 5.2c-0.4 0.3 8.3-6.1 8.3-18.3 0-1.5-.2-3-.4-4.5z"/>
+        </svg>
+        Continue with Google
+      </button>
     </div>
   </div>
 
@@ -221,6 +236,9 @@
 
       closeBtn?.addEventListener('click', close);
       modal?.addEventListener('click', e=>{ if(e.target===modal) close(); });
+      document.getElementById('googleBtn')?.addEventListener('click',()=>{
+        if(window.handleGoogleLogin) window.handleGoogleLogin();
+      });
 
       try{
         const auth = window.firebase?.auth && firebase.auth();
@@ -232,51 +250,7 @@
     });
   </script>
 
-  <!-- Picker logic + Tip (카테고리 전환시에만) -->
-  <script>
-    (function(){
-      const CATS=["Daily","Travel","K-Drama"];
-      const legacy={daily:dailyBtn,travel:travelBtn,drama:dramaBtn};
-      const trigger=pickerTrigger, menu=pickerMenu;
-      const list=menu.querySelector('.picker-list');
-      list.innerHTML='';
-      CATS.forEach((c,i)=>{
-        const el=document.createElement('div');
-        el.className='picker-item'+(i===0?' active':''); el.textContent=c;
-        el.onclick=()=>select(c,el); list.appendChild(el);
-      });
-      function setActive(el){ list.querySelectorAll('.picker-item').forEach(n=>n.classList.remove('active')); el.classList.add('active'); }
-      function select(name,el){
-        setActive(el); trigger.textContent=name; menu.classList.remove('open');
-        const key=name.toLowerCase();
-        if(key==='daily')  legacy.daily?.click();
-        if(key==='travel') legacy.travel?.click();
-        if(key.includes('drama')) legacy.drama?.click();
-        changeTip();
-      }
-      trigger.onclick=(e)=>{ e.stopPropagation(); menu.classList.toggle('open'); };
-      document.onclick=()=>menu.classList.remove('open');
-      savedBtn?.addEventListener('click',()=> savedBtnHidden?.click());
-
-      const tips=[
-        "Tip: Small daily reps beat big, rare sessions.",
-        "Tip: Shadow the sound, not the spelling.",
-        "Tip: Say it out loud — your mouth must learn too.",
-        "Tip: Five clean repeats > twenty sloppy ones.",
-        "Tip: Record yourself and match the rhythm.",
-        "Tip: First mimic, then understand.",
-        "Tip: Keep the same speed; build consistency.",
-        "Tip: Close your eyes and copy the melody.",
-        "Tip: Bite-sized goals. One phrase at a time.",
-        "Tip: Revisit yesterday — retention makes speed."
-      ];
-      const tipEl=document.getElementById('tipText');
-      function changeTip(){ if(tipEl) tipEl.textContent=tips[Math.floor(Math.random()*tips.length)]; }
-      changeTip();
-    })();
-  </script>
-
-  <!-- Navigation rewrite (기존) -->
+  <!-- Navigation rewrite (기존 로직 유지) -->
   <script>
   (function(){
     const btn={next:nextBtn,prev:prevBtn,daily:dailyBtn,travel:travelBtn,drama:dramaBtn};
@@ -313,7 +287,7 @@
     function sendPV(title){ try{ gtag('event','page_view',{page_title:title||document.title,page_location:location.href,page_path:buildPath(),send_to:'G-X1Q98DBKR5'});}catch(e){} }
     function sendSessionStart(){ try{ gtag('event','session_start',{send_to:'G-X1Q98DBKR5'});}catch(e){} }
     document.addEventListener('DOMContentLoaded',()=>{ setTimeout(()=>{ sendSessionStart(); sendPV('Sori'); },0); });
-    ['dailyBtn','travelBtn','dramaBtn','savedBtnHidden'].forEach(id=>{ const el=document.getElementById(id); el&&el.addEventListener('click',()=> setTimeout(()=>sendPV(`Sori - ${el.textContent.trim()}`),0)); });
+    ['dailyBtn','travelBtn','dramaBtn','savedBtn'].forEach(id=>{ const el=document.getElementById(id); el&&el.addEventListener('click',()=> setTimeout(()=>sendPV(`Sori - ${el.textContent.trim()}`),0)); });
     const subFilters=document.getElementById('subFilters');
     subFilters&&subFilters.addEventListener('click',e=>{ const chip=e.target.closest('.sub-chip'); if(!chip) return; setTimeout(()=>sendPV(`Sori - ${chip.textContent.trim()}`),0); });
     nextBtn?.addEventListener('click',()=> setTimeout(()=>sendPV('Sori - Next'),0),true);
@@ -341,43 +315,38 @@
   })();
   </script>
 
-  <!-- Layout fix: 위=영어 뜻, 아래=en=발음. #korean 변경시에만 스왑 -->
+  <!-- Layout fix: 위=영어 뜻, 아래=en=발음. #korean/#english/#context 변경시 즉시 스왑 -->
   <script>
   (function(){
+    const q = (id) => document.getElementById(id);
     const quote=(s)=>`"${String(s||'').replace(/^"+|"+$/g,'').trim()}"`;
-    let lastKo='';
+    let lastKey='';
 
     function swap(){
-      const ko=(korean?.textContent||'').trim();
-      if(!ko || ko===lastKo) return;
-      lastKo=ko;
-
-      const ctx=context, en=english, pr=document.getElementById('pronunciation');
-      if(!ctx || !en) return;
-
-      const englishRaw=(en.textContent||'').trim();   // 원본 영어 뜻
-      const romanRaw=(pr?.textContent||'').trim();    // 원본 발음
-
-      if(englishRaw) ctx.textContent = quote(englishRaw);
-      if(romanRaw)   en.textContent  = romanRaw;
-      if(pr) pr.style.display='none';
+      const ko=(q('korean')?.textContent||'').trim();
+      const enEl=q('english'), prEl=q('pronunciation'), ctxEl=q('context');
+      if(!enEl || !ctxEl) return;
+      const enRaw=(enEl.textContent||'').trim();
+      const prRaw=(prEl?.textContent||'').trim();
+      const key=ko+'|'+enRaw+'|'+prRaw;
+      if(key===lastKey) return;
+      lastKey=key;
+      if(enRaw) ctxEl.textContent=quote(enRaw);
+      if(prRaw) enEl.textContent=prRaw;
+      if(prEl) prEl.style.display='none';
     }
 
     document.addEventListener('DOMContentLoaded', swap);
-
-    // 오직 #korean 바뀔 때만 다시 스왑
-    const koNode=document.getElementById('korean');
-    if(koNode){
+    ['korean','english','context'].forEach(id=>{
+      const node=q(id); if(!node) return;
       const mo=new MutationObserver(()=> requestAnimationFrame(swap));
-      mo.observe(koNode,{childList:true,characterData:true,subtree:true});
-    }
-    // 사용자 조작 후에도 한 틱 지연해서 보정
-    ['nextBtn','prevBtn','dailyBtn','travelBtn','dramaBtn','savedBtnHidden'].forEach(id=>{
+      mo.observe(node,{childList:true,subtree:true,characterData:true});
+    });
+    ['nextBtn','prevBtn','dailyBtn','travelBtn','dramaBtn','savedBtn','subFilters'].forEach(id=>{
       const el=document.getElementById(id);
-      el && el.addEventListener('click',()=> setTimeout(swap,0), true);
+      el && el.addEventListener('click',()=> setTimeout(swap,0),true);
     });
   })();
   </script>
 </body>
 </html>
-
