--- a/index.html
+++ b/index.html
@@ -33,29 +33,29 @@
     *{box-sizing:border-box}
     body{
       font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
-      max-width:680px;margin:0 auto;padding:12px;background:#faf8ff;min-height:100vh;color:#1f2937
+      max-width:720px;margin:0 auto;padding:16px;background:#faf8ff;min-height:100vh;color:#1f2937
     }
-    h1{font-size:24px;margin:0 0 4px;color:#7c3aed;font-weight:800}
+    h1{font-size:26px;margin:0 0 4px;color:#7c3aed;font-weight:800}
     .intro{color:#9ca3af;font-size:12px;margin-bottom:10px;line-height:1.3;font-weight:500}
 
-    .header{display:flex;justify-content:space-between;align-items:center;margin-bottom:10px}
-    .top-btn{padding:6px 12px;border-radius:10px;font-size:12px;font-weight:700;border:0;cursor:pointer}
+    .header{display:flex;justify-content:space-between;align-items:center;margin-bottom:12px}
+    .top-btn{padding:8px 14px;border-radius:12px;font-size:12px;font-weight:700;border:0;cursor:pointer}
     .top-btn.primary{background:#7c3aed;color:#fff}
 
-    .card{background:#fff;border-radius:16px;padding:16px;margin:8px 0;box-shadow:0 2px 12px rgba(0,0,0,.05)}
+    .card{background:#fff;border-radius:18px;padding:18px;margin:10px 0;box-shadow:0 2px 12px rgba(0,0,0,.06)}
 
     /* Category picker */
     .category-bar{display:flex;align-items:center;gap:12px}
     .picker-wrap{position:relative}
     .picker-trigger{
       padding:12px 18px;border-radius:14px;background:#7c3aed;color:#fff;
-      font-weight:800;border:0;cursor:pointer;min-width:200px;text-align:center
+      font-weight:800;border:0;cursor:pointer;min-width:220px;text-align:center
     }
     .picker-menu{
       position:absolute;top:100%;left:0;right:0;margin-top:6px;background:#fff;border-radius:12px;
       box-shadow:0 10px 30px rgba(0,0,0,.15);overflow:hidden;max-height:0;transition:max-height .25s ease;z-index:50
     }
-    .picker-menu.open{max-height:156px}
+    .picker-menu.open{max-height:160px}
     .picker-list{max-height:150px;overflow-y:auto;padding:6px;scrollbar-width:thin}
     .picker-item{
       height:44px;line-height:44px;border-radius:12px;margin:6px 4px;text-align:center;
@@ -63,7 +63,7 @@
     }
     .picker-item:hover,.picker-item.active{background:#7c3aed;color:#fff}
     .saved-btn{
-      height:44px;padding:0 16px;border-radius:12px;background:#fff;color:#7c3aed;border:2px solid #e9defd;font-weight:800;cursor:pointer;white-space:nowrap
+      height:44px;padding:0 18px;border-radius:12px;background:#fff;color:#7c3aed;border:2px solid #e9defd;font-weight:800;cursor:pointer;white-space:nowrap
     }
     .saved-btn:hover{background:#f7f2ff}
 
@@ -73,23 +73,23 @@
     .sub-chip.active{background:#7c3aed;border-color:#7c3aed;color:#fff}
 
     .row-between{display:flex;justify-content:space-between;align-items:center;gap:8px}
-    .badge{display:inline-block;background:#7c3aed;color:#fff;font-size:11px;font-weight:800;padding:5px 10px;border-radius:10px}
-    .icon-btn{border:none;background:transparent;width:32px;height:32px;display:inline-flex;align-items:center;justify-content:center;font-size:20px;color:#9ca3af;cursor:pointer;border-radius:8px}
+    .badge{display:inline-block;background:#7c3aed;color:#fff;font-size:11px;font-weight:800;padding:5px 10px;border-radius:12px}
+    .icon-btn{border:none;background:transparent;width:36px;height:36px;display:inline-flex;align-items:center;justify-content:center;font-size:20px;color:#9ca3af;cursor:pointer;border-radius:8px}
     .icon-btn.active{color:#e11d48}
 
     .context{color:#6b7280;font-size:16px;text-align:center;margin:8px 0 0;font-weight:600}
 
-    .kbox{background:#f9fafb;border-radius:14px;padding:16px 12px;margin:12px 0;text-align:center}
-    .ko{font-size:28px;font-weight:900;color:#1f2937;margin:0 0 6px}
+    .kbox{background:#f3f4f6;border-radius:16px;padding:18px 14px;margin:12px 0;text-align:center}
+    .ko{font-size:30px;font-weight:900;color:#111827;margin:0 0 8px}
     .en{color:#6b7280;font-size:16px;margin:0 0 10px;font-weight:600}
 
-    .practice{background:#f9fafb;border-radius:10px;padding:10px}
+    .practice{background:#f9fafb;border-radius:12px;padding:12px}
     .practice-label{font-size:12px;font-weight:600;color:#6b7280;text-align:center;margin:0 0 8px}
-    .dots{display:flex;gap:6px;justify-content:center;margin-bottom:8px}
-    .rep-dot{width:32px;height:32px;border-radius:50%;border:2px solid #e5e7eb;background:#fff}
+    .dots{display:flex;gap:10px;justify-content:center;margin-bottom:8px}
+    .rep-dot{width:30px;height:30px;border-radius:50%;border:2px solid #e5e7eb;background:#fff;transition:.15s}
     .rep-dot.completed{background:#7c3aed;border-color:#7c3aed}
 
-    button.big{width:100%;padding:12px 18px;border-radius:14px;border:0;cursor:pointer;font-weight:800;font-size:15px;background:#7c3aed;color:#fff}
+    button.big{width:100%;padding:14px 20px;border-radius:14px;border:0;cursor:pointer;font-weight:800;font-size:15px;background:#7c3aed;color:#fff}
 
     /* Speed slider brand color */
     input[type="range"]{accent-color:#7c3aed;outline:0}
@@ -98,7 +98,7 @@
     input[type="range"]::-moz-range-track{height:6px;border-radius:999px;background:#e9defd}
     input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;background:#7c3aed;border:2px solid #6d28d9}
 
-    .row{display:flex;align-items:center;justify-content:center;gap:8px;background:#f9fafb;border-radius:8px;padding:8px;margin-top:8px}
+    .row{display:flex;align-items:center;justify-content:center;gap:8px;background:#f9fafb;border-radius:10px;padding:10px;margin-top:8px}
     .tip-card{margin-top:10px;background:#fff1f2;border-left:3px solid #e11d48;border-radius:10px;padding:10px}
     .tip-text{font-size:12px;color:#9f1239;font-weight:600}
 
@@ -107,20 +107,20 @@
     /* Auth modal */
     .auth{position:fixed;inset:0;display:none;align-items:center;justify-content:center;z-index:9999;background:rgba(0,0,0,.45);padding:16px}
     .auth.open{display:flex}
-    .auth-card{background:#fff;width:100%;max-width:360px;border-radius:18px;padding:24px;box-shadow:0 18px 50px rgba(0,0,0,.35);text-align:center;position:relative}
+    .auth-card{background:#fff;width:100%;max-width:380px;border-radius:20px;padding:24px;box-shadow:0 18px 50px rgba(0,0,0,.35);text-align:center;position:relative}
     .auth-close{position:absolute;top:10px;right:10px;background:none;border:none;font-size:22px;color:#9ca3af;cursor:pointer}
 
-    /* Modern nav bar */
-    .navbar{display:flex;align-items:center;justify-content:space-between;gap:10px}
-    .nav-center{min-width:112px;text-align:center;font-size:13px;color:#6b7280;font-weight:600}
+    /* Modern nav bar - 더 큼직하게 */
+    .navbar{display:flex;align-items:center;justify-content:space-between;gap:14px}
+    .nav-center{min-width:130px;text-align:center;font-size:13px;color:#6b7280;font-weight:700}
     .nav-btn{
-      display:inline-flex;align-items:center;gap:8px;
-      padding:10px 14px;border-radius:12px;border:1px solid #e5e7eb;
-      background:#fff;color:#374151;cursor:pointer;font-weight:700;
-      box-shadow:0 1px 4px rgba(0,0,0,.04)
+      display:inline-flex;align-items:center;justify-content:center;gap:10px;
+      padding:12px 22px;border-radius:14px;border:1.5px solid #e5e7eb;
+      background:#fff;color:#111827;cursor:pointer;font-weight:800;font-size:14px;
+      box-shadow:0 1px 6px rgba(0,0,0,.05)
     }
     .nav-btn:hover{border-color:#d8dbe2}
-    .nav-btn .caret{font-size:14px;color:#7c3aed}
+    .nav-btn .caret{font-size:15px;color:#7c3aed}
     .nav-btn:disabled{opacity:.5;cursor:not-allowed}
   </style>
 </head>
@@ -182,8 +182,8 @@
     <button id="playBtn" class="big">Listen & Repeat</button>
     <div class="row">
       <label>Speed:</label>
-      <input id="speed" type="range" min="0.3" max="1.0" step="0.1" value="0.75" />
-      <span id="speedTxt">0.75x</span>
+      <input id="speed" type="range" min="0.3" max="1.0" step="0.1" value="0.80" />
+      <span id="speedTxt">0.80x</span>
     </div>
 
     <div class="tip-card"><div id="tipText" class="tip-text">Tip: Listen carefully and repeat multiple times. Consistency is key.</div></div>
@@ -352,20 +352,43 @@
   });
   </script>
 
-  <!-- Layout fix + Practice dots -->
+  <!-- Layout fix + Practice dots: SORI_DATA에서 정확히 찾아 채우기 -->
   <script>
   (function(){
     const quote=(s)=>`"${String(s||'').replace(/^"+|"+$/g,'').trim()}"`;
-    let lastKo='';
+    let lastK='';
 
-    function forceMeaningRoman(){
-      const ko=korean, en=english, pr=pronunciation, ctx=context;
-      if(!ko||!en||!pr||!ctx) return;
-      if(!en.dataset.meaning) en.dataset.meaning=(en.textContent||'').trim();
-      if(!pr.dataset.roman)   pr.dataset.roman  =(pr.textContent||'').trim();
-      ctx.textContent=quote(en.dataset.meaning||'');
-      en.textContent=(pr.dataset.roman||'');
-      pr.style.display='none';
+    function findInDataByK(ko){
+      try{
+        const DB = window.SORI_DATA || {};
+        const pools = [DB.daily||[], DB.travel||[], DB.drama||[]];
+        for(const arr of pools){
+          const hit = arr.find(x => (x.k||'').trim() === ko);
+          if(hit) return hit; // {t,c,k,e,p,sub}
+        }
+      }catch(e){}
+      return null;
+    }
+
+    function applyMeaningRoman(){
+      const koEl = document.getElementById('korean');
+      const enEl = document.getElementById('english');
+      const prEl = document.getElementById('pronunciation');
+      const ctxEl= document.getElementById('context');
+      if(!koEl||!enEl||!prEl||!ctxEl) return;
+
+      const koText=(koEl.textContent||'').trim();
+      if(!koText) return;
+
+      // 데이터에서 정답을 찾아서 강제 세팅
+      const data = findInDataByK(koText);
+      const meaning = data?.e || (ctxEl.textContent||'').replace(/(^"+|"+$)/g,'').trim();
+      const roman   = data?.p || (prEl.textContent||'').trim() || (enEl.textContent||'').trim();
+
+      if(meaning) ctxEl.textContent = quote(meaning);
+      if(roman)   enEl.textContent  = roman;
+
+      prEl.style.display='none';
     }
 
     function resetDots(){
@@ -376,20 +399,21 @@
 
     function onSentenceChanged(){
       const ko=(korean?.textContent||'').trim();
-      if(!ko || ko===lastKo) return;
-      lastKo=ko;
-      forceMeaningRoman();
+      if(!ko || ko===lastK) return;
+      lastK=ko;
+      applyMeaningRoman();
       resetDots();
     }
 
     document.addEventListener('DOMContentLoaded', ()=>{
-      forceMeaningRoman();
+      applyMeaningRoman();
+
+      // 문장 변경 감지
       const mo=new MutationObserver(()=> requestAnimationFrame(onSentenceChanged));
       mo.observe(korean,{childList:true,characterData:true,subtree:true});
 
-      // 재생 시 연습 카운트 증가 (최대 5)
-      const play= document.getElementById('playBtn');
-      play.addEventListener('click', ()=>{
+      // 재생시 점 채우기
+      playBtn.addEventListener('click', ()=>{
         const cntEl=document.getElementById('repCount');
         let n=parseInt(cntEl.textContent||'0',10);
         if(n<5){ n++; cntEl.textContent=String(n); }
@@ -397,10 +421,10 @@
         dots.forEach((d,i)=> d.classList.toggle('completed', i < n));
       });
 
-      // 네비 또는 탭 이동 시 의미/로마자 재적용 및 점 초기화
+      // 탭/네비 이동 시도 때 재적용
       ['nextBtn','prevBtn','dailyBtn','travelBtn','dramaBtn','savedBtnHidden'].forEach(id=>{
         const el=document.getElementById(id);
-        el && el.addEventListener('click', ()=> setTimeout(()=>{ forceMeaningRoman(); resetDots(); },0), true);
+        el && el.addEventListener('click', ()=> setTimeout(()=>{ applyMeaningRoman(); resetDots(); },0), true);
       });
 
       // Speed 표시 동기화
